install(PROGRAMS bb.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbapi.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbapiAdmin.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbapiTest.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbapiAdminProcs.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbapi_main.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS Procedures.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS RunProcedure.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bberror.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(PROGRAMS bbtests.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
