install(FILES bb.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbapi.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbapiAdmin.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbapiTest.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbapiAdminProcs.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbapi_main.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES Procedures.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES RunProcedure.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bberror.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
install(FILES bbtests.py COMPONENT burstbuffer-tests DESTINATION bb/wrappers)
